--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "src",
     "prebuilds",
     "index.js",
+    "index.js.flow",
+    "index.d.ts"
     "package.json",
     "binding.gyp",
-    "README.md"
+    "README.md",
   ],
   "scripts": {
     "prebuild": "prebuildify --napi --strip --tag-libc -t 10.0.0",
